--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;1,300&display=swap"
     rel="stylesheet">
 
-  <title>React App</title>
+  <title>E-commerce App</title>
 </head>
 
 <body>
